# sino-scrub

./: CONTRIBUTING.md  Creative-147.txt  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-02-27-sino-scrub-design.md  2026-02-27-sino-scrub-implementation.md
src/sino_scrub/: __init__.py  cli.py  processor.py  utils.py  visualizer.py
src/sino_scrub/data/: cultural_taboo.json  political_sensitive.json  translation_fix.json
tests/: test_cli.py  test_processor.py
