[tool.poetry]
name = "sino-scrub"
version = "0.1.0"
description = "毫秒级清洗 AI 文本中的文化禁忌与敏感词"
authors = ["Chance Dean <novelnexusai@outlook.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/PerryLink/sino-scrub"
repository = "https://github.com/PerryLink/sino-scrub"
packages = [{include = "sino_scrub", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flashtext = "^2.7"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
scrub = "sino_scrub.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
